# simGW

./: .gitignore  EVALUATION_MIGRATION_PROTOCOL.md  GNSSTalk.py  MIGRATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  REFACTORING_WAVE2_REPORT.md  TabDemo.py  TabDevices.py  TabExpert.py  TabSettings.py  analyze_waveform.py  apply_all_devices_fixes.py  ble_config.py  ble_filters.py  ble_session_helpers.py  ble_waveform_service.py  ble_worker_services.py  communication.md  config.py  data_exporters.py  demo_tab.py  devices_tab.py  display_formatters.py  exchange.py  expert_tab.py  fix_build_ui_devices_indent.py  fix_indentation.py  fix_init_indent.py  protobuf_formatters.py  protocol_imports.py  protocol_utils.py  requirements.txt  session_recorder.py  simGW.py  simGw_v14_ui.py  simGw_v2.py  simGw_v3.py  simGw_v4.py  simGw_v5.py  (+18 more)
captures/: waveform_tile1_20260227_111908_index.csv  waveform_tile1_20260303_161310.txt  waveform_tile1_20260303_163447.txt  waveform_tile1_20260303_165551.txt  waveform_tile1_20260303_165627.txt  waveform_tile1_20260303_165938.txt  waveform_tile1_20260303_170426.txt  waveform_tile1_20260304_084502.txt  waveform_tile1_20260304_085357.txt  waveform_tile1_20260304_085623.txt  waveform_tile1_20260304_093224.txt  waveform_tile1_20260304_095130.txt  waveform_tile1_20260304_095642.txt  waveform_tile2_20260303_170143.txt  waveform_tile3_20260303_162244.txt  (+12 more)
froto/: Common.proto  (+19 more)
sensor_code/ble/: CMakeLists.txt  ble.c  ble.h  ble_GattServer.c  ble_advertising.c  ble_connection.c  ble_controller.c  ble_generic.c  ble_host.c  ble_internal.h  ble_nvm.c
(+791 files in other folders)
